Fix carousel alignment issues when less than 3 slides (#327)

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -18,6 +18,11 @@ $scrollbar-max-width: 17px !default;
     transition: opacity 250ms ease;
   }
 
+  // Align carousel items to left
+  .slick-track {
+    margin: 0;
+  }
+
   .slick-active {
     opacity: 1;
     pointer-events: auto;
